12-kubernetes-05-cni/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world1
  labels:
    app: hello-world1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world1
  template:
    metadata:
      labels:
        app: hello-world1
    spec:
      containers:
      - name: hello-world1
        image: k8s.gcr.io/echoserver:1.4
