12-kubernetes-05-cni/8080.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world1
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: hello-world
      ports:
        - protocol: TCP
          port: 8080
